...
              fontSize: 10.5, fontWeight: FontWeight.w500),
          type: BottomNavigationBarType.fixed,
          items: [
            const BottomNavigationBarItem(
              icon: Icon(Icons.dashboard_outlined),
              activeIcon: Icon(Icons.dashboard),
              label: 'Dashboard',
            ),
            BottomNavigationBarItem(
              icon: Stack(children: [
                const Icon(Icons.list_alt_outlined),
                Positioned(
                    right: 0,
...
